semantic/parser.output
Grammar

    0 $accept: program $end

    1 program: gvar_all_def func_def prog_content
    2        | gvar_all_def func_def
    3        | func_def prog_content
    4        | func_def

    5 prog_content: prog_content var_def
    6             | prog_content func_def
    7             | prog_content func_decl
    8             | var_def
    9             | func_def
   10             | func_decl

   11 gvar_all_def: gvar_all_def var_def
   12             | gvar_all_def func_decl
   13             | var_def
   14             | func_decl

   15 var_all_def: var_def

   16 $@1: %empty

   17 $@2: %empty

   18 func_def: basic ID '(' argu_list argu ')' $@1 '{' $@2 compound_in_argu_func '}'

   19 $@3: %empty

   20 $@4: %empty

   21 func_def: basic ID '(' argu ')' $@3 '{' $@4 compound_in_argu_func '}'

   22 $@5: %empty

   23 $@6: %empty

   24 func_def: basic ID '(' ')' $@5 '{' $@6 compound_in_argu_func '}'

   25 $@7: %empty

   26 $@8: %empty

   27 func_def: void_reduce ID '(' argu_list argu ')' $@7 '{' $@8 compound_in_argu_func '}'

   28 $@9: %empty

   29 $@10: %empty

   30 func_def: void_reduce ID '(' argu ')' $@9 '{' $@10 compound_in_argu_func '}'

   31 $@11: %empty

   32 $@12: %empty

   33 func_def: void_reduce ID '(' ')' $@11 '{' $@12 compound_in_argu_func '}'

   34 $@13: %empty

   35 compound: '{' $@13 compound_list '}'

   36 $@14: %empty

   37 compound: '{' $@14 '}'

   38 compound_in_argu_func: compound_list
   39                      | %empty

   40 compound_list: compound_list var_all_def
   41              | compound_list statement
   42              | statement
   43              | var_all_def

   44 $@15: %empty

   45 func_decl: basic ID '(' argu_list argu ')' $@15 ';'

   46 $@16: %empty

   47 func_decl: basic ID '(' argu ')' $@16 ';'

   48 $@17: %empty

   49 func_decl: basic ID '(' ')' $@17 ';'

   50 $@18: %empty

   51 func_decl: void_reduce ID '(' argu_list argu ')' $@18 ';'

   52 $@19: %empty

   53 func_decl: void_reduce ID '(' argu ')' $@19 ';'

   54 $@20: %empty

   55 func_decl: void_reduce ID '(' ')' $@20 ';'

   56 argu_list: argu_list argu ','
   57          | argu ','

   58 argu: basic ID
   59     | basic ID array_argu_step

   60 array_argu_step: array_argu_step '[' INT_CONST ']'
   61                | '[' INT_CONST ']'

   62 basic: BASIC_TYPE

   63 void_reduce: VOID

   64 liter_const: int_value
   65            | '-' int_value
   66            | float_value
   67            | '-' float_value
   68            | bool_value
   69            | string_value

   70 value_type: int_value
   71           | float_value
   72           | bool_value
   73           | string_value

   74 int_value: INT_CONST

   75 float_value: FLOAT_CONST

   76 bool_value: BOOL_CONST

   77 string_value: STRING_CONST

   78 var_list: var_list ID ','
   79         | var_list ID '=' expr ','
   80         | ID ','
   81         | ID '=' expr ','
   82         | var_list ID arr_step '=' arr_init ','
   83         | var_list ID arr_step ','
   84         | ID arr_step '=' arr_init ','
   85         | ID arr_step ','

   86 const_list: const_list ID '=' liter_const ','
   87           | ID '=' liter_const ','

   88 var_def: basic var_list ID ';'
   89        | basic var_list ID '=' expr ';'
   90        | basic ID ';'
   91        | basic ID '=' expr ';'
   92        | basic var_list ID arr_step '=' arr_init ';'
   93        | basic var_list ID arr_step ';'
   94        | basic ID arr_step '=' arr_init ';'
   95        | basic ID arr_step ';'
   96        | CONST basic const_list ID '=' liter_const ';'
   97        | CONST basic ID '=' liter_const ';'

   98 arr_step: arr_step '[' INT_CONST ']'
   99         | '[' INT_CONST ']'

  100 arr_init: '{' arr_argu_list expr '}'
  101         | '{' expr '}'
  102         | '{' '}'

  103 arr_argu_list: arr_argu_list expr ','
  104              | expr ','

  105 expr: expr '*' expr
  106     | expr '/' expr
  107     | expr '+' expr
  108     | expr '-' expr
  109     | expr '%' expr
  110     | expr '<' expr
  111     | expr LE expr
  112     | expr '>' expr
  113     | expr GE expr
  114     | expr EQ expr
  115     | expr NE expr
  116     | '(' expr ')'
  117     | '-' expr
  118     | expr AND expr
  119     | expr OR expr
  120     | '!' expr
  121     | value_type
  122     | ID
  123     | func_invo
  124     | arr_ref

  125 arr_ref: ID arr_ref_step

  126 arr_ref_step: arr_ref_step '[' expr ']'
  127             | '[' expr ']'

  128 func_invo: ID '(' expr_list expr ')'
  129          | ID '(' expr ')'
  130          | ID '(' ')'

  131 expr_list: expr_list expr ','
  132          | expr ','

  133 statement: compound
  134          | simple_stat
  135          | condition
  136          | while_stat
  137          | for_stat
  138          | jump_stat
  139          | expr ';'

  140 simple_stat: var_ref '=' expr ';'
  141            | PRINT expr ';'
  142            | READ var_ref ';'

  143 var_ref: ID
  144        | arr_ref

  145 condition: IF '(' bool_expr ')' compound
  146          | IF '(' bool_expr ')' compound ELSE compound

  147 bool_expr: expr

  148 $@21: %empty

  149 while_stat: WHILE '(' bool_expr ')' $@21 compound

  150 $@22: %empty

  151 $@23: %empty

  152 while_stat: DO $@22 compound $@23 WHILE '(' bool_expr ')' ';'

  153 $@24: %empty

  154 for_stat: FOR '(' init_expr ';' bool_expr ';' incr_expr ')' $@24 compound

  155 $@25: %empty

  156 for_stat: FOR '(' init_expr ';' ';' incr_expr ')' $@25 compound

  157 init_expr: init_expr_list var_ref '=' expr
  158          | init_expr_list func_invo
  159          | func_invo
  160          | var_ref '=' expr
  161          | %empty

  162 init_expr_list: init_expr_list var_ref '=' expr ','
  163               | init_expr_list func_invo ','
  164               | func_invo ','
  165               | var_ref '=' expr ','

  166 incr_expr: incr_expr_list var_ref '=' expr ','
  167          | var_ref '=' expr
  168          | %empty

  169 incr_expr_list: incr_expr_list var_ref '=' expr ','
  170               | var_ref '=' expr ','

  171 jump_stat: RETURN expr ';'
  172          | BREAK ';'
  173          | CONTINUE ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 120
'%' (37) 109
'(' (40) 18 21 24 27 30 33 45 47 49 51 53 55 116 128 129 130 145 146
    149 152 154 156
')' (41) 18 21 24 27 30 33 45 47 49 51 53 55 116 128 129 130 145 146
    149 152 154 156
'*' (42) 105
'+' (43) 107
',' (44) 56 57 78 79 80 81 82 83 84 85 86 87 103 104 131 132 162 163
    164 165 166 169 170
'-' (45) 65 67 108 117
'/' (47) 106
';' (59) 45 47 49 51 53 55 88 89 90 91 92 93 94 95 96 97 139 140 141
    142 152 154 156 171 172 173
'<' (60) 110
'=' (61) 79 81 82 84 86 87 89 91 92 94 96 97 140 157 160 162 165 166
    167 169 170
'>' (62) 112
'[' (91) 60 61 98 99 126 127
']' (93) 60 61 98 99 126 127
'{' (123) 18 21 24 27 30 33 35 37 100 101 102
'}' (125) 18 21 24 27 30 33 35 37 100 101 102
error (256)
VOID (258) 63
BASIC_TYPE (259) 62
ID (260) 18 21 24 27 30 33 45 47 49 51 53 55 58 59 78 79 80 81 82 83
    84 85 86 87 88 89 90 91 92 93 94 95 96 97 122 125 128 129 130 143
INT_CONST (261) 60 61 74 98 99
FLOAT_CONST (262) 75
BOOL_CONST (263) 76
STRING_CONST (264) 77
READ (265) 142
PRINT (266) 141
IF (267) 145 146
ELSE (268) 146
DO (269) 152
WHILE (270) 149 152
FOR (271) 154 156
CONTINUE (272) 173
BREAK (273) 172
RETURN (274) 171
CONST (275) 96 97
OR (276) 119
AND (277) 118
LE (278) 111
EQ (279) 114
GE (280) 113
NE (281) 115
UNOT (282)
UMINUS (283)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1 2 3 4, on right: 0
prog_content (48)
    on left: 5 6 7 8 9 10, on right: 1 3 5 6 7
gvar_all_def (49)
    on left: 11 12 13 14, on right: 1 2 11 12
var_all_def (50)
    on left: 15, on right: 40 43
func_def (51)
    on left: 18 21 24 27 30 33, on right: 1 2 3 4 6 9
$@1 (52)
    on left: 16, on right: 18
$@2 (53)
    on left: 17, on right: 18
$@3 (54)
    on left: 19, on right: 21
$@4 (55)
    on left: 20, on right: 21
$@5 (56)
    on left: 22, on right: 24
$@6 (57)
    on left: 23, on right: 24
$@7 (58)
    on left: 25, on right: 27
$@8 (59)
    on left: 26, on right: 27
$@9 (60)
    on left: 28, on right: 30
$@10 (61)
    on left: 29, on right: 30
$@11 (62)
    on left: 31, on right: 33
$@12 (63)
    on left: 32, on right: 33
compound (64)
    on left: 35 37, on right: 133 145 146 149 152 154 156
$@13 (65)
    on left: 34, on right: 35
$@14 (66)
    on left: 36, on right: 37
compound_in_argu_func (67)
    on left: 38 39, on right: 18 21 24 27 30 33
compound_list (68)
    on left: 40 41 42 43, on right: 35 38 40 41
func_decl (69)
    on left: 45 47 49 51 53 55, on right: 7 10 12 14
$@15 (70)
    on left: 44, on right: 45
$@16 (71)
    on left: 46, on right: 47
$@17 (72)
    on left: 48, on right: 49
$@18 (73)
    on left: 50, on right: 51
$@19 (74)
    on left: 52, on right: 53
$@20 (75)
    on left: 54, on right: 55
argu_list (76)
    on left: 56 57, on right: 18 27 45 51 56
argu (77)
    on left: 58 59, on right: 18 21 27 30 45 47 51 53 56 57
array_argu_step (78)
    on left: 60 61, on right: 59 60
basic (79)
    on left: 62, on right: 18 21 24 45 47 49 58 59 88 89 90 91 92 93
    94 95 96 97
void_reduce (80)
    on left: 63, on right: 27 30 33 51 53 55
liter_const (81)
    on left: 64 65 66 67 68 69, on right: 86 87 96 97
value_type (82)
    on left: 70 71 72 73, on right: 121
int_value (83)
    on left: 74, on right: 64 65 70
float_value (84)
    on left: 75, on right: 66 67 71
bool_value (85)
    on left: 76, on right: 68 72
string_value (86)
    on left: 77, on right: 69 73
var_list (87)
    on left: 78 79 80 81 82 83 84 85, on right: 78 79 82 83 88 89 92
    93
const_list (88)
    on left: 86 87, on right: 86 96
var_def (89)
    on left: 88 89 90 91 92 93 94 95 96 97, on right: 5 8 11 13 15
arr_step (90)
    on left: 98 99, on right: 82 83 84 85 92 93 94 95 98
arr_init (91)
    on left: 100 101 102, on right: 82 84 92 94
arr_argu_list (92)
    on left: 103 104, on right: 100 103
expr (93)
    on left: 105 106 107 108 109 110 111 112 113 114 115 116 117 118
    119 120 121 122 123 124, on right: 79 81 89 91 100 101 103 104
    105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120
    126 127 128 129 131 132 139 140 141 147 157 160 162 165 166 167
    169 170 171
arr_ref (94)
    on left: 125, on right: 124 144
arr_ref_step (95)
    on left: 126 127, on right: 125 126
func_invo (96)
    on left: 128 129 130, on right: 123 158 159 163 164
expr_list (97)
    on left: 131 132, on right: 128 131
statement (98)
    on left: 133 134 135 136 137 138 139, on right: 41 42
simple_stat (99)
    on left: 140 141 142, on right: 134
var_ref (100)
    on left: 143 144, on right: 140 142 157 160 162 165 166 167 169
    170
condition (101)
    on left: 145 146, on right: 135
bool_expr (102)
    on left: 147, on right: 145 146 149 152 154
while_stat (103)
    on left: 149 152, on right: 136
$@21 (104)
    on left: 148, on right: 149
$@22 (105)
    on left: 150, on right: 152
$@23 (106)
    on left: 151, on right: 152
for_stat (107)
    on left: 154 156, on right: 137
$@24 (108)
    on left: 153, on right: 154
$@25 (109)
    on left: 155, on right: 156
init_expr (110)
    on left: 157 158 159 160 161, on right: 154 156
init_expr_list (111)
    on left: 162 163 164 165, on right: 157 158 162 163
incr_expr (112)
    on left: 166 167 168, on right: 154 156
incr_expr_list (113)
    on left: 169 170, on right: 166 169
jump_stat (114)
    on left: 171 172 173, on right: 138


State 0

    0 $accept: . program $end

    VOID        shift, and go to state 1
    BASIC_TYPE  shift, and go to state 2
    CONST       shift, and go to state 3

    program       go to state 4
    gvar_all_def  go to state 5
    func_def      go to state 6
    func_decl     go to state 7
    basic         go to state 8
    void_reduce   go to state 9
    var_def       go to state 10


State 1

   63 void_reduce: VOID .

    $default  reduce using rule 63 (void_reduce)


State 2

   62 basic: BASIC_TYPE .

    $default  reduce using rule 62 (basic)


State 3

   96 var_def: CONST . basic const_list ID '=' liter_const ';'
   97        | CONST . basic ID '=' liter_const ';'

    BASIC_TYPE  shift, and go to state 2

    basic  go to state 11


State 4

    0 $accept: program . $end

    $end  shift, and go to state 12


State 5

    1 program: gvar_all_def . func_def prog_content
    2        | gvar_all_def . func_def
   11 gvar_all_def: gvar_all_def . var_def
   12             | gvar_all_def . func_decl

    VOID        shift, and go to state 1
    BASIC_TYPE  shift, and go to state 2
    CONST       shift, and go to state 3

    func_def     go to state 13
    func_decl    go to state 14
    basic        go to state 8
    void_reduce  go to state 9
    var_def      go to state 15


State 6

    3 program: func_def . prog_content
    4        | func_def .

    VOID        shift, and go to state 1
    BASIC_TYPE  shift, and go to state 2
    CONST       shift, and go to state 3

    $default  reduce using rule 4 (program)

    prog_content  go to state 16
    func_def      go to state 17
    func_decl     go to state 18
    basic         go to state 8
    void_reduce   go to state 9
    var_def       go to state 19


State 7

   14 gvar_all_def: func_decl .

    $default  reduce using rule 14 (gvar_all_def)


State 8

   18 func_def: basic . ID '(' argu_list argu ')' $@1 '{' $@2 compound_in_argu_func '}'
   21         | basic . ID '(' argu ')' $@3 '{' $@4 compound_in_argu_func '}'
   24         | basic . ID '(' ')' $@5 '{' $@6 compound_in_argu_func '}'
   45 func_decl: basic . ID '(' argu_list argu ')' $@15 ';'
   47          | basic . ID '(' argu ')' $@16 ';'
   49          | basic . ID '(' ')' $@17 ';'
   88 var_def: basic . var_list ID ';'
   89        | basic . var_list ID '=' expr ';'
   90        | basic . ID ';'
   91        | basic . ID '=' expr ';'
   92        | basic . var_list ID arr_step '=' arr_init ';'
   93        | basic . var_list ID arr_step ';'
   94        | basic . ID arr_step '=' arr_init ';'
   95        | basic . ID arr_step ';'

    ID  shift, and go to state 20

    var_list  go to state 21


State 9

   27 func_def: void_reduce . ID '(' argu_list argu ')' $@7 '{' $@8 compound_in_argu_func '}'
   30         | void_reduce . ID '(' argu ')' $@9 '{' $@10 compound_in_argu_func '}'
   33         | void_reduce . ID '(' ')' $@11 '{' $@12 compound_in_argu_func '}'
   51 func_decl: void_reduce . ID '(' argu_list argu ')' $@18 ';'
   53          | void_reduce . ID '(' argu ')' $@19 ';'
   55          | void_reduce . ID '(' ')' $@20 ';'

    ID  shift, and go to state 22


State 10

   13 gvar_all_def: var_def .

    $default  reduce using rule 13 (gvar_all_def)


State 11

   96 var_def: CONST basic . const_list ID '=' liter_const ';'
   97        | CONST basic . ID '=' liter_const ';'

    ID  shift, and go to state 23

    const_list  go to state 24


State 12

    0 $accept: program $end .

    $default  accept


State 13

    1 program: gvar_all_def func_def . prog_content
    2        | gvar_all_def func_def .

    VOID        shift, and go to state 1
    BASIC_TYPE  shift, and go to state 2
    CONST       shift, and go to state 3

    $default  reduce using rule 2 (program)

    prog_content  go to state 25
    func_def      go to state 17
    func_decl     go to state 18
    basic         go to state 8
    void_reduce   go to state 9
    var_def       go to state 19


State 14

   12 gvar_all_def: gvar_all_def func_decl .

    $default  reduce using rule 12 (gvar_all_def)


State 15

   11 gvar_all_def: gvar_all_def var_def .

    $default  reduce using rule 11 (gvar_all_def)


State 16

    3 program: func_def prog_content .
    5 prog_content: prog_content . var_def
    6             | prog_content . func_def
    7             | prog_content . func_decl

    VOID        shift, and go to state 1
    BASIC_TYPE  shift, and go to state 2
    CONST       shift, and go to state 3

    $default  reduce using rule 3 (program)

    func_def     go to state 26
    func_decl    go to state 27
    basic        go to state 8
    void_reduce  go to state 9
    var_def      go to state 28


State 17

    9 prog_content: func_def .

    $default  reduce using rule 9 (prog_content)


State 18

   10 prog_content: func_decl .

    $default  reduce using rule 10 (prog_content)


State 19

    8 prog_content: var_def .

    $default  reduce using rule 8 (prog_content)


State 20

   18 func_def: basic ID . '(' argu_list argu ')' $@1 '{' $@2 compound_in_argu_func '}'
   21         | basic ID . '(' argu ')' $@3 '{' $@4 compound_in_argu_func '}'
   24         | basic ID . '(' ')' $@5 '{' $@6 compound_in_argu_func '}'
   45 func_decl: basic ID . '(' argu_list argu ')' $@15 ';'
   47          | basic ID . '(' argu ')' $@16 ';'
   49          | basic ID . '(' ')' $@17 ';'
   80 var_list: ID . ','
   81         | ID . '=' expr ','
   84         | ID . arr_step '=' arr_init ','
   85         | ID . arr_step ','
   90 var_def: basic ID . ';'
   91        | basic ID . '=' expr ';'
   94        | basic ID . arr_step '=' arr_init ';'
   95        | basic ID . arr_step ';'

    '('  shift, and go to state 29
    ';'  shift, and go to state 30
    ','  shift, and go to state 31
    '['  shift, and go to state 32
    '='  shift, and go to state 33

    arr_step  go to state 34


State 21

   78 var_list: var_list . ID ','
   79         | var_list . ID '=' expr ','
   82         | var_list . ID arr_step '=' arr_init ','
   83         | var_list . ID arr_step ','
   88 var_def: basic var_list . ID ';'
   89        | basic var_list . ID '=' expr ';'
   92        | basic var_list . ID arr_step '=' arr_init ';'
   93        | basic var_list . ID arr_step ';'

    ID  shift, and go to state 35


State 22

   27 func_def: void_reduce ID . '(' argu_list argu ')' $@7 '{' $@8 compound_in_argu_func '}'
   30         | void_reduce ID . '(' argu ')' $@9 '{' $@10 compound_in_argu_func '}'
   33         | void_reduce ID . '(' ')' $@11 '{' $@12 compound_in_argu_func '}'
   51 func_decl: void_reduce ID . '(' argu_list argu ')' $@18 ';'
   53          | void_reduce ID . '(' argu ')' $@19 ';'
   55          | void_reduce ID . '(' ')' $@20 ';'

    '('  shift, and go to state 36


State 23

   87 const_list: ID . '=' liter_const ','
   97 var_def: CONST basic ID . '=' liter_const ';'

    '='  shift, and go to state 37


State 24

   86 const_list: const_list . ID '=' liter_const ','
   96 var_def: CONST basic const_list . ID '=' liter_const ';'

    ID  shift, and go to state 38


State 25

    1 program: gvar_all_def func_def prog_content .
    5 prog_content: prog_content . var_def
    6             | prog_content . func_def
    7             | prog_content . func_decl

    VOID        shift, and go to state 1
    BASIC_TYPE  shift, and go to state 2
    CONST       shift, and go to state 3

    $default  reduce using rule 1 (program)

    func_def     go to state 26
    func_decl    go to state 27
    basic        go to state 8
    void_reduce  go to state 9
    var_def      go to state 28


State 26

    6 prog_content: prog_content func_def .

    $default  reduce using rule 6 (prog_content)


State 27

    7 prog_content: prog_content func_decl .

    $default  reduce using rule 7 (prog_content)


State 28

    5 prog_content: prog_content var_def .

    $default  reduce using rule 5 (prog_content)


State 29

   18 func_def: basic ID '(' . argu_list argu ')' $@1 '{' $@2 compound_in_argu_func '}'
   21         | basic ID '(' . argu ')' $@3 '{' $@4 compound_in_argu_func '}'
   24         | basic ID '(' . ')' $@5 '{' $@6 compound_in_argu_func '}'
   45 func_decl: basic ID '(' . argu_list argu ')' $@15 ';'
   47          | basic ID '(' . argu ')' $@16 ';'
   49          | basic ID '(' . ')' $@17 ';'

    BASIC_TYPE  shift, and go to state 2
    ')'         shift, and go to state 39

    argu_list  go to state 40
    argu       go to state 41
    basic      go to state 42


State 30

   90 var_def: basic ID ';' .

    $default  reduce using rule 90 (var_def)


State 31

   80 var_list: ID ',' .

    $default  reduce using rule 80 (var_list)


State 32

   99 arr_step: '[' . INT_CONST ']'

    INT_CONST  shift, and go to state 43


State 33

   81 var_list: ID '=' . expr ','
   91 var_def: basic ID '=' . expr ';'

    ID            shift, and go to state 44
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    BOOL_CONST    shift, and go to state 47
    STRING_CONST  shift, and go to state 48
    '-'           shift, and go to state 49
    '('           shift, and go to state 50
    '!'           shift, and go to state 51

    value_type    go to state 52
    int_value     go to state 53
    float_value   go to state 54
    bool_value    go to state 55
    string_value  go to state 56
    expr          go to state 57
    arr_ref       go to state 58
    func_invo     go to state 59


State 34

   84 var_list: ID arr_step . '=' arr_init ','
   85         | ID arr_step . ','
   94 var_def: basic ID arr_step . '=' arr_init ';'
   95        | basic ID arr_step . ';'
   98 arr_step: arr_step . '[' INT_CONST ']'

    ';'  shift, and go to state 60
    ','  shift, and go to state 61
    '['  shift, and go to state 62
    '='  shift, and go to state 63


State 35

   78 var_list: var_list ID . ','
   79         | var_list ID . '=' expr ','
   82         | var_list ID . arr_step '=' arr_init ','
   83         | var_list ID . arr_step ','
   88 var_def: basic var_list ID . ';'
   89        | basic var_list ID . '=' expr ';'
   92        | basic var_list ID . arr_step '=' arr_init ';'
   93        | basic var_list ID . arr_step ';'

    ';'  shift, and go to state 64
    ','  shift, and go to state 65
    '['  shift, and go to state 32
    '='  shift, and go to state 66

    arr_step  go to state 67


State 36

   27 func_def: void_reduce ID '(' . argu_list argu ')' $@7 '{' $@8 compound_in_argu_func '}'
   30         | void_reduce ID '(' . argu ')' $@9 '{' $@10 compound_in_argu_func '}'
   33         | void_reduce ID '(' . ')' $@11 '{' $@12 compound_in_argu_func '}'
   51 func_decl: void_reduce ID '(' . argu_list argu ')' $@18 ';'
   53          | void_reduce ID '(' . argu ')' $@19 ';'
   55          | void_reduce ID '(' . ')' $@20 ';'

    BASIC_TYPE  shift, and go to state 2
    ')'         shift, and go to state 68

    argu_list  go to state 69
    argu       go to state 70
    basic      go to state 42


State 37

   87 const_list: ID '=' . liter_const ','
   97 var_def: CONST basic ID '=' . liter_const ';'

    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    BOOL_CONST    shift, and go to state 47
    STRING_CONST  shift, and go to state 48
    '-'           shift, and go to state 71

    liter_const   go to state 72
    int_value     go to state 73
    float_value   go to state 74
    bool_value    go to state 75
    string_value  go to state 76


State 38

   86 const_list: const_list ID . '=' liter_const ','
   96 var_def: CONST basic const_list ID . '=' liter_const ';'

    '='  shift, and go to state 77


State 39

   24 func_def: basic ID '(' ')' . $@5 '{' $@6 compound_in_argu_func '}'
   49 func_decl: basic ID '(' ')' . $@17 ';'

    ';'       reduce using rule 48 ($@17)
    $default  reduce using rule 22 ($@5)

    $@5   go to state 78
    $@17  go to state 79


State 40

   18 func_def: basic ID '(' argu_list . argu ')' $@1 '{' $@2 compound_in_argu_func '}'
   45 func_decl: basic ID '(' argu_list . argu ')' $@15 ';'
   56 argu_list: argu_list . argu ','

    BASIC_TYPE  shift, and go to state 2

    argu   go to state 80
    basic  go to state 42


State 41

   21 func_def: basic ID '(' argu . ')' $@3 '{' $@4 compound_in_argu_func '}'
   47 func_decl: basic ID '(' argu . ')' $@16 ';'
   57 argu_list: argu . ','

    ')'  shift, and go to state 81
    ','  shift, and go to state 82


State 42

   58 argu: basic . ID
   59     | basic . ID array_argu_step

    ID  shift, and go to state 83


State 43

   99 arr_step: '[' INT_CONST . ']'

    ']'  shift, and go to state 84


State 44

  122 expr: ID .
  125 arr_ref: ID . arr_ref_step
  128 func_invo: ID . '(' expr_list expr ')'
  129          | ID . '(' expr ')'
  130          | ID . '(' ')'

    '('  shift, and go to state 85
    '['  shift, and go to state 86

    $default  reduce using rule 122 (expr)

    arr_ref_step  go to state 87


State 45

   74 int_value: INT_CONST .

    $default  reduce using rule 74 (int_value)


State 46

   75 float_value: FLOAT_CONST .

    $default  reduce using rule 75 (float_value)


State 47

   76 bool_value: BOOL_CONST .

    $default  reduce using rule 76 (bool_value)


State 48

   77 string_value: STRING_CONST .

    $default  reduce using rule 77 (string_value)


State 49

  117 expr: '-' . expr

    ID            shift, and go to state 44
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    BOOL_CONST    shift, and go to state 47
    STRING_CONST  shift, and go to state 48
    '-'           shift, and go to state 49
    '('           shift, and go to state 50
    '!'           shift, and go to state 51

    value_type    go to state 52
    int_value     go to state 53
    float_value   go to state 54
    bool_value    go to state 55
    string_value  go to state 56
    expr          go to state 88
    arr_ref       go to state 58
    func_invo     go to state 59


State 50

  116 expr: '(' . expr ')'

    ID            shift, and go to state 44
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    BOOL_CONST    shift, and go to state 47
    STRING_CONST  shift, and go to state 48
    '-'           shift, and go to state 49
    '('           shift, and go to state 50
    '!'           shift, and go to state 51

    value_type    go to state 52
    int_value     go to state 53
    float_value   go to state 54
    bool_value    go to state 55
    string_value  go to state 56
    expr          go to state 89
    arr_ref       go to state 58
    func_invo     go to state 59


State 51

  120 expr: '!' . expr

    ID            shift, and go to state 44
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    BOOL_CONST    shift, and go to state 47
    STRING_CONST  shift, and go to state 48
    '-'           shift, and go to state 49
    '('           shift, and go to state 50
    '!'           shift, and go to state 51

    value_type    go to state 52
    int_value     go to state 53
    float_value   go to state 54
    bool_value    go to state 55
    string_value  go to state 56
    expr          go to state 90
    arr_ref       go to state 58
    func_invo     go to state 59


State 52

  121 expr: value_type .

    $default  reduce using rule 121 (expr)


State 53

   70 value_type: int_value .

    $default  reduce using rule 70 (value_type)


State 54

   71 value_type: float_value .

    $default  reduce using rule 71 (value_type)


State 55

   72 value_type: bool_value .

    $default  reduce using rule 72 (value_type)


State 56

   73 value_type: string_value .

    $default  reduce using rule 73 (value_type)


State 57

   81 var_list: ID '=' expr . ','
   91 var_def: basic ID '=' expr . ';'
  105 expr: expr . '*' expr
  106     | expr . '/' expr
  107     | expr . '+' expr
  108     | expr . '-' expr
  109     | expr . '%' expr
  110     | expr . '<' expr
  111     | expr . LE expr
  112     | expr . '>' expr
  113     | expr . GE expr
  114     | expr . EQ expr
  115     | expr . NE expr
  118     | expr . AND expr
  119     | expr . OR expr

    OR   shift, and go to state 91
    AND  shift, and go to state 92
    LE   shift, and go to state 93
    EQ   shift, and go to state 94
    GE   shift, and go to state 95
    NE   shift, and go to state 96
    '<'  shift, and go to state 97
    '>'  shift, and go to state 98
    '+'  shift, and go to state 99
    '-'  shift, and go to state 100
    '*'  shift, and go to state 101
    '/'  shift, and go to state 102
    '%'  shift, and go to state 103
    ';'  shift, and go to state 104
    ','  shift, and go to state 105


State 58

  124 expr: arr_ref .

    $default  reduce using rule 124 (expr)


State 59

  123 expr: func_invo .

    $default  reduce using rule 123 (expr)


State 60

   95 var_def: basic ID arr_step ';' .

    $default  reduce using rule 95 (var_def)


State 61

   85 var_list: ID arr_step ',' .

    $default  reduce using rule 85 (var_list)


State 62

   98 arr_step: arr_step '[' . INT_CONST ']'

    INT_CONST  shift, and go to state 106


State 63

   84 var_list: ID arr_step '=' . arr_init ','
   94 var_def: basic ID arr_step '=' . arr_init ';'

    '{'  shift, and go to state 107

    arr_init  go to state 108


State 64

   88 var_def: basic var_list ID ';' .

    $default  reduce using rule 88 (var_def)


State 65

   78 var_list: var_list ID ',' .

    $default  reduce using rule 78 (var_list)


State 66

   79 var_list: var_list ID '=' . expr ','
   89 var_def: basic var_list ID '=' . expr ';'

    ID            shift, and go to state 44
    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    BOOL_CONST    shift, and go to state 47
    STRING_CONST  shift, and go to state 48
    '-'           shift, and go to state 49
    '('           shift, and go to state 50
    '!'           shift, and go to state 51

    value_type    go to state 52
    int_value     go to state 53
    float_value   go to state 54
    bool_value    go to state 55
    string_value  go to state 56
    expr          go to state 109
    arr_ref       go to state 58
    func_invo     go to state 59


State 67

   82 var_list: var_list ID arr_step . '=' arr_init ','
   83         | var_list ID arr_step . ','
   92 var_def: basic var_list ID arr_step . '=' arr_init ';'
   93        | basic var_list ID arr_step . ';'
   98 arr_step: arr_step . '[' INT_CONST ']'

    ';'  shift, and go to state 110
    ','  shift, and go to state 111
    '['  shift, and go to state 62
    '='  shift, and go to state 112


State 68

   33 func_def: void_reduce ID '(' ')' . $@11 '{' $@12 compound_in_argu_func '}'
   55 func_decl: void_reduce ID '(' ')' . $@20 ';'

    ';'       reduce using rule 54 ($@20)
    $default  reduce using rule 31 ($@11)

    $@11  go to state 113
    $@20  go to state 114


State 69

   27 func_def: void_reduce ID '(' argu_list . argu ')' $@7 '{' $@8 compound_in_argu_func '}'
   51 func_decl: void_reduce ID '(' argu_list . argu ')' $@18 ';'
   56 argu_list: argu_list . argu ','

    BASIC_TYPE  shift, and go to state 2

    argu   go to state 115
    basic  go to state 42


State 70

   30 func_def: void_reduce ID '(' argu . ')' $@9 '{' $@10 compound_in_argu_func '}'
   53 func_decl: void_reduce ID '(' argu . ')' $@19 ';'
   57 argu_list: argu . ','

    ')'  shift, and go to state 116
    ','  shift, and go to state 82


State 71

   65 liter_const: '-' . int_value
   67            | '-' . float_value

    INT_CONST    shift, and go to state 45
    FLOAT_CONST  shift, and go to state 46

    int_value    go to state 117
    float_value  go to state 118


State 72

   87 const_list: ID '=' liter_const . ','
   97 var_def: CONST basic ID '=' liter_const . ';'

    ';'  shift, and go to state 119
    ','  shift, and go to state 120


State 73

   64 liter_const: int_value .

    $default  reduce using rule 64 (liter_const)


State 74

   66 liter_const: float_value .

    $default  reduce using rule 66 (liter_const)


State 75

   68 liter_const: bool_value .

    $default  reduce using rule 68 (liter_const)


State 76

   69 liter_const: string_value .

    $default  reduce using rule 69 (liter_const)


State 77

   86 const_list: const_list ID '=' . liter_const ','
   96 var_def: CONST basic const_list ID '=' . liter_const ';'

    INT_CONST     shift, and go to state 45
    FLOAT_CONST   shift, and go to state 46
    BOOL_CONST    shift, and go to state 47
    STRING_CONST  shift, and go to state 48
    '-'           shift, and go to state 71

    liter_const   go to state 121
    int_value     go to state 73
    float_value   go to state 74
    bool_value    go to state 75
    string_value  go to state 76


State 78

   24 func_def: basic ID '(' ')' $@5 . '{' $@6 compound_in_argu_func '}'

    '{'  shift, and go to state 122


State 79
